--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">ToDoList</string>
+    <string name="app_name">hpeng2.ToDoList</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_add_event">AddEventActivity</string>
     <string name="title_activity_archived_event">Archived Events</string>
     <string name="title_activity_email_event">Email Events</string>
     <string name="title_activity_statistics">Statistics</string>
+    <string name="title_activity_to_do_event">ToDoEventActivity</string>
 
 </resources>
